// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemSnippet should first metadata snippet if exists 1`] = `
<div
  className="item-snippet-wrapper"
>
  <div
    className="item-snippet-source"
  >
    <Translate
      context="template"
    >
      Title
    </Translate>
  </div>
  <div
    className="item-snippet"
    onClick={[MockFunction]}
  >
    <SafeHTML>
      title 1 &lt;b&gt;snippet&lt;/b&gt; found
    </SafeHTML>
  </div>
  <div>
    <a
      onClick={[MockFunction]}
    >
      <Translate
        context="System"
      >
        Show more
      </Translate>
    </a>
  </div>
</div>
`;

exports[`ItemSnippet should first metadata snippet if metadata only has metadata field snippets 1`] = `
<div
  className="item-snippet-wrapper"
>
  <div
    className="item-snippet-source"
  >
    <Translate
      context="template"
    >
      Summary
    </Translate>
  </div>
  <div
    className="item-snippet"
    onClick={[MockFunction]}
  >
    <SafeHTML>
      metadata 1 &lt;b&gt;snippet&lt;/b&gt; found
    </SafeHTML>
  </div>
  <div>
    <a
      onClick={[MockFunction]}
    >
      <Translate
        context="System"
      >
        Show more
      </Translate>
    </a>
  </div>
</div>
`;

exports[`ItemSnippet should first metadata snippet when there are no document content snippets 1`] = `
<div
  className="item-snippet-wrapper"
>
  <div
    className="item-snippet-source"
  >
    <Translate
      context="template"
    >
      Title
    </Translate>
  </div>
  <div
    className="item-snippet"
    onClick={[MockFunction]}
  >
    <SafeHTML>
      title 1 &lt;b&gt;snippet&lt;/b&gt; found
    </SafeHTML>
  </div>
  <div>
    <a
      onClick={[MockFunction]}
    >
      <Translate
        context="System"
      >
        Show more
      </Translate>
    </a>
  </div>
</div>
`;

exports[`ItemSnippet should first title snippet if metadata only has title snippets 1`] = `
<div
  className="item-snippet-wrapper"
>
  <div
    className="item-snippet-source"
  >
    <Translate
      context="template"
    >
      Title
    </Translate>
  </div>
  <div
    className="item-snippet"
    onClick={[MockFunction]}
  >
    <SafeHTML>
      title 1 &lt;b&gt;snippet&lt;/b&gt; found
    </SafeHTML>
  </div>
  <div>
    <a
      onClick={[MockFunction]}
    >
      <Translate
        context="System"
      >
        Show more
      </Translate>
    </a>
  </div>
</div>
`;

exports[`ItemSnippet should show first document snippet if there are not metadata snippets 1`] = `
<div
  className="item-snippet-wrapper"
>
  <div
    className="item-snippet-source"
  >
    <Translate
      context="System"
    >
      Document contents
    </Translate>
  </div>
  <div
    className="item-snippet"
    onClick={[MockFunction]}
  >
    <SafeHTML>
      doc &lt;b&gt;snippet&lt;/b&gt; found
    </SafeHTML>
  </div>
  <div>
    <a
      onClick={[MockFunction]}
    >
      <Translate
        context="System"
      >
        Show more
      </Translate>
    </a>
  </div>
</div>
`;
